[gd_scene load_steps=3 format=3 uid="uid://cdjkty46rmgyc"]

[ext_resource type="Texture2D" uid="uid://bqneo4l0etook" path="res://assets/closeIcon.png" id="1_8yy24"]
[ext_resource type="Script" path="res://homeSavedItem.gd" id="1_o6sge"]

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(400, 110)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -70.0
offset_right = 156.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
script = ExtResource("1_o6sge")

[node name="teamNum" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 24.0
offset_right = 79.0
offset_bottom = 50.0
scale = Vector2(1.2, 1.2)
theme_override_font_sizes/font_size = 20
text = "Team #"

[node name="matchNum" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 60.0
offset_right = 79.0
offset_bottom = 86.0
scale = Vector2(1.2, 1.2)
theme_override_font_sizes/font_size = 20
text = "Match #"

[node name="personalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 23.0
offset_right = 196.0
offset_bottom = 54.0
scale = Vector2(1.2, 1.2)
theme_override_font_sizes/font_size = 20
text = "p score"

[node name="totalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 58.0
offset_right = 194.0
offset_bottom = 89.0
scale = Vector2(1.2, 1.2)
theme_override_font_sizes/font_size = 20
text = "t score"

[node name="qr" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 228.167
offset_top = 2.5
offset_right = 315.167
offset_bottom = 89.5
scale = Vector2(1.2, 1.2)
stretch_mode = 5

[node name="open" type="Button" parent="."]
layout_mode = 0
offset_right = 181.0
offset_bottom = 92.0
scale = Vector2(1.2, 1.2)
flat = true

[node name="close" type="Button" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 31.0
offset_right = 386.0
offset_bottom = 83.0
scale = Vector2(1.2, 1.2)
icon = ExtResource("1_8yy24")
flat = true
expand_icon = true

[connection signal="pressed" from="qr" to="." method="_on_qr_pressed"]
[connection signal="pressed" from="open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
